Swarun: Changed website

--- a/mmfd.html
+++ b/mmfd.html
@@ -157,10 +157,14 @@ With wireless traffic demands slated to double every year, we explore Full Duple
 </table>
 </section>
 </div>
-<div class="6u 12u(mobile)"> <section> 
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/pUFN0CXvZGY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="papers/mmfd-mobicom2020.pdf">PAPER</a>]<br /><br />
+<li> <strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="papers/mmfd-mobicom2020.pdf">PAPER</a>] [<a href="slides/mmfd-mobicom2020.pptx">SLIDES</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
