--- a/wifi.html
+++ b/wifi.html
@@ -165,7 +165,7 @@ This project aims to address one of the most challenging problems with existing 
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
-<li><strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="papers/mmfd-mobicom2020.pdf">PAPER</a>] [<a href="mmfd.html">WEBSITE</a>]<br /></li>
+<li><strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="papers/mmfd-mobicom2020.pdf">PAPER</a>] [<a href="slides/mmfd-mobicom2020.pptx">SLIDES</a>] [<a href="mmfd.html">WEBSITE</a>]<br /></li>
 <li><strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>] [<a href="intuwition.html">WEBSITE</a>]<br /></li>
 <li><strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus, International Symposium on Robotics Research (ISRR)  2013 [<a href="wiseek.html">WEBSITE</a>]<br /></li>
 <li><strong>Bringing Cross-Layer MIMO to Today's Wireless LANs</strong>, Swarun Kumar, Diego Cifuentes, Shyamnath Gollakota, and Dina Katabi, ACM SIGCOMM  2013 [<a href="papers/openrf-sigcomm2013.pdf">PAPER</a>] [<a href="slides/openrf-sigcomm2013.pptx">SLIDES</a>] [<a href="openrf.html">WEBSITE</a>]<br /></li>
