--- a/xg.html
+++ b/xg.html
@@ -157,7 +157,7 @@ This project aims to devise next-generation wireless networks that achieve faste
 <br />
 </section><section>
 <strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/jhasOfGaS5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/pUFN0CXvZGY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br /> <br /></section>
 </div>
 <div class="6u 12u(mobile)">
@@ -168,7 +168,7 @@ This project aims to devise next-generation wireless networks that achieve faste
 <li><strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 <em>(Best Paper Honorable Mention)</em> [<a href="papers/osprey-mobisys2020.pdf">PAPER</a>] [<a href="slides/osprey-mobisys2020.pptx">SLIDES</a>] [<a href="osprey.html">WEBSITE</a>]<br /></li>
 <li><strong>Osprey Demo: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="osprey.html">WEBSITE</a>]<br /></li>
 <li><strong>Quick (and Dirty) Aggregate Queries on Low-Power WANs</strong>, Akshay Gadre, Fan Yi, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2020 <em>(Best Paper Award)</em> [<a href="papers/quail-ipsn2020.pdf">PAPER</a>] [<a href="quail.html">WEBSITE</a>]<br /></li>
-<li><strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="papers/mmfd-mobicom2020.pdf">PAPER</a>] [<a href="mmfd.html">WEBSITE</a>]<br /></li>
+<li><strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="papers/mmfd-mobicom2020.pdf">PAPER</a>] [<a href="slides/mmfd-mobicom2020.pptx">SLIDES</a>] [<a href="mmfd.html">WEBSITE</a>]<br /></li>
 <li><strong>Perspective: eliminating channel feedback in next generation cellular networks </strong>, Deepak Vasisht, Swarun Kumar, Hariharan Rahul and Dina Katabi, ACM SIGCOMM CCR  2019<br /></li>
 <li><strong>Eliminating Channel Feedback in Next-Generation Cellular Networks </strong>, Deepak Vasisht, Swarun Kumar, Hariharan Rahul and Dina Katabi, SIGCOMM  2016 <em>(Best Paper Award, GetMobile Research Highlight)</em><br /></li>
 <li><strong>piStream: Physical Layer Informed Adaptive Video Streaming Over LTE</strong>, Xiufeng Xie, Xinyu Zhang, Swarun Kumar, and Li Erran Li, MobiCom  2015 <em>(ACM GetMobile Research Hightlight)</em><br /></li>
