--- a/rftattoo.html
+++ b/rftattoo.html
@@ -164,7 +164,7 @@
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>RFID Tattoo: A Wireless Platform for Speech Recognition </strong>, Jingxian Wang, Chengfeng Pan, Haojian Jin, Vaibhav Singh, Yash Jain, Jason Hong, Carmel Majidi and Swarun Kumar, UbiComp  2020 [<a href="papers/rftattoo-ubicomp2020.pdf">PAPER</a>]<br /><br />
+<li> <strong>RFID Tattoo: A Wireless Platform for Speech Recognition </strong>, Jingxian Wang, Chengfeng Pan, Haojian Jin, Vaibhav Singh, Yash Jain, Jason Hong, Carmel Majidi and Swarun Kumar, UbiComp  2020 <em>(Best Wearables Long Paper)</em> [<a href="papers/rftattoo-ubicomp2020.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
