Swarun: Changed website

--- a/featuring-akshay.html
+++ b/featuring-akshay.html
@@ -140,7 +140,7 @@
 
 
 <header>
-<h2 style="margin-left:30px">Featured Student: Akshay Gadre</h2>
+<h2 style="margin-left:30px">Akshay Gadre</h2>
 </header>
 
 <table>
