Swarun: Changed website

--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@
 											</p>
 										</section>
 
+
+									<!-- Box #3 -->
+										<section>
+											<header>
+												<h2>Contact Information</h2>
+												<!-- <h3>And a final subheading about our clients</h3> -->
+											</header>
+											Our lab is located on the 4th floor of the Collaborative Innovation Center on the CMU campus. Professor Swarun Kumar, the PI, has his contact information listed <a href = "https://www.andrew.cmu.edu/user/swarunk/index.html"> here</a>.
+</section>
+
+
 								</div>
 
 
@@ -216,10 +227,11 @@
 									<!-- Box #3 -->
 										<section>
 											<header>
-												<h2>Contact Information</h2>
+												<h2>Featured Member</h2>
 												<!-- <h3>And a final subheading about our clients</h3> -->
 											</header>
-											Our lab is located on the 4th floor of the Collaborative Innovation Center on the CMU campus. Professor Swarun Kumar, the PI, has his contact information listed <a href = "https://www.andrew.cmu.edu/user/swarunk/index.html"> here</a>.
+<div style="text-align:center"><a href="featuring-akshay.html"><figure><img src="images/Akshay.jpg" alt="" style="width:175px;height:200px;vertical-align:middle; border: #FFFFFF 4px solid"/><figcaption>Akshay Gadre</figcaption></figure></a></div>
+</section>
 </div>
 
 
