--- a/publications.html
+++ b/publications.html
@@ -145,6 +145,8 @@ Our research interests are in the area of computer networks with a special focus
 
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
+<li><strong>Full Duplex Radios: Are we there yet?</strong>, Vaibhav Singh (Co-Primary), Akshay Gadre (Co-Primary) and Swarun Kumar, HotNets  2020 [<a href="papers/fdstudy-hotnets2020.pdf">PAPER</a>] [<a href="fdstudy.html">WEBSITE</a>]<br /></li>
+<li><strong>Cross Technology Distributed MIMO for Low Power IoT</strong>, Revathy Narayanan, Swarun Kumar and C. Siva Ram Murthy, IEEE Transactions on Mobile Computing  2020 [<a href="chariot.html">WEBSITE</a>]<br /></li>
 <li><strong>Joltik: Enabling Energy-Efficient "Future-Proof" Analytics on Low-Power Wide-Area Networks</strong>, Mingran Yang, Junbo Zhang, Akshay Gadre, Zaoxing Liu, Swarun Kumar and Vyas Sekar, MobiCom  2020 [<a href="papers/joltik-mobicom2020.pdf">PAPER</a>] [<a href="joltik.html">WEBSITE</a>]<br /></li>
 <li><strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 <em>(Best Paper Honorable Mention)</em> [<a href="papers/osprey-mobisys2020.pdf">PAPER</a>] [<a href="slides/osprey-mobisys2020.pptx">SLIDES</a>] [<a href="osprey.html">WEBSITE</a>]<br /></li>
 <li><strong>A Cloud-Optimized Link Layer for Low-Power Wide-Area Networks</strong>, Artur Balanuta, Nuno Pereira, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="papers/opr-mobisys2020.pdf">PAPER</a>] [<a href="opr.html">WEBSITE</a>]<br /></li>
