Swarun: Changed website

--- a/fdstudy.html
+++ b/fdstudy.html
@@ -157,7 +157,11 @@ Full Duplex Communication has been extensively studied over the past decade in a
 </table>
 </section>
 </div>
-<div class="6u 12u(mobile)"> <section> 
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/jcW1_xf-gp0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Full Duplex Radios: Are we there yet?</strong>, Vaibhav Singh (Co-Primary), Akshay Gadre (Co-Primary) and Swarun Kumar, HotNets  2020 [<a href="papers/fdstudy-hotnets2020.pdf">PAPER</a>]<br /><br />
