Swarun: Changed website

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 												<h2>Featured Member</h2>
 												<!-- <h3>And a final subheading about our clients</h3> -->
 											</header>
-<div style="text-align:center"><a href="featuring-akshay.html"><figure><img src="images/Akshay.jpg" alt="" style="width:175px;height:200px;vertical-align:middle; border: #FFFFFF 4px solid"/><figcaption>Akshay Gadre</figcaption></figure></a></div>
+<div style="text-align:center"><a href="featuring-junbo.html"><figure><img src="images/Junbo.jpg" alt="" style="width:175px;height:200px;vertical-align:middle; border: #FFFFFF 4px solid"/><figcaption>Junbo Zhang</figcaption></figure></a></div>
 </section>
 </div>
 
