Swarun: Changed website

--- a/owll.html
+++ b/owll.html
@@ -136,50 +136,32 @@
 
 
 
-<div class="12u"><section>
-
-
-<header>
-<h2 style="margin-left:30px">Junbo Zhang</h2>
-</header>
-
-<table>
-<tr><td style="vertical-align:middle;">
-									<img src="images/Junbo.jpg" alt="" style="margin-left:30px;width:175px;height:200px;vertical-align:middle; border: #FFFFFF 4px solid"/>
-</td>
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project OwLL:  Accurate LoRa Localization using the TV Whitespaces</h4></strong><br />
+<table style="width:100%">
+<tr>
 <td>
-<div style="margin-left:30px; vertical-align:middle; float:right">
-Junbo Zhang is a second year Ph.D student in Electrical and Computer Engineering at Carnegie Mellon University. He is a wireless communication and mobile systems researcher advised by Prof. Swarun Kumar. His research at the WiTech Lab focusses on developing solutions for ultra low-power and battery-free wireless. His work has been published at premier venues in wireless communications and networks such as MobiCom and NSDI. In his spare time, he likes singing and playing guitar. Check out Junbo's website [<a href="http://www.andrew.cmu.edu/user/junboz2/">here</a>]. 
+<div style="padding:10px;border-width:2px;border-style:solid">
+<img src="images/owll.png" style="width:100%"/>
 </div>
 </td>
 </tr>
+<tr>
+<td style="width:10px">
+<br />
+</td>
+</tr><tr>
+<td style="vertical-align:middle">
+OwLL is a LoRa localization system that limits location tracking error to a few meters with commodity LoRa clients in a wide-area network. Our key innovation is the development of a distributed base station network made of individually low-cost components that together span a wide-bandwidth that encompasses the TV whitespaces and offers high aperture, crucial to localization accuracy. We demonstrate how this network can aggregate signal measurements made across multiple different narrowband channels of a LoRa client to triangulate it at fine accuracy. We implement and evaluate OwLL on a testbed spanning the Carnegie Mellon campus.
+</td>
+</tr>
 </table>
-<br />
-
-<strong><h3 style="margin-left:30px">Can you tell me about your research interests and focus?</h3></strong>
-<div style="margin-left:30px">
-My research interests lie broadly in wireless systems -- trying to play with radio signals in a creative way. This includes wireless sensing systems, sensor networks, battery-free IoT devices, you name it. As we step into the era of 5G, Wi-Fi 6 and IoT, wireless signals become an indispensable part of our daily life. My first projects, as a young man who just got fascinated by the magic of wireless signals, were <a href="pushid.html">PushID</a> and <a href="intuwition.html">IntuWition</a>, which I engaged in during my summer internship at WiTech back in 2018. As a brand-new PhD student, I explored LP-WAN a little bit -- enabling energy-efficient aggregates of sensory readings from LP-WAN clients (<a href="joltik.html">Joltik</a>), and I got my hands busy with NFC -- a small project relevant is <a href="nofacecontact.html">NoFaceContact</a> (of course, more to come). Given the opportunity, I might also explore a little bit about (Security and Privacy for Wireless Networks) in the near future. Do you find my story eclectic? Well, a good story should not only be comprehensive, but also rich regarding its "main theme" (or, we can call that a "thesis"), and that is exactly what I am going to work on in my next few years.
+</section>
 </div>
-<br />
-
-<strong><h3 style="margin-left:30px">What are the research accomplishments that you are most proud of?</h3></strong>
-<div style="margin-left:30px">
-I was about to mention my experiences for <a href="pushid.html">PushID</a> when Jingxian and I had quite a number of days like this: moving tens of thousands of dollars worth equipments to the CIC garage, spending the whole day collecting data with various fellow CMU students passing by and asking questions and then processing them into midnight. Yet, we are now in 2020, and nothing could be more disruptive than this worldwide COVID-19 pandemic. Therefore, I want to mention my experiences from March to May, when I was working together with Jingxian on another project. Another tens of thousands of dollars worth equipments, whole bunches of messy wires and antennas, bulky oscillators and power supplies, as well as the magic (namely expertise, sweat, patience, patience and patience) to make them into a coherent system. I built (or more precisely, re-built) the whole system in my home -- a small room in a 5B3B house. I literally woke up and slept along with "my dear devices", did a whole bunch of experiments and we made it before the deadline together. Personally, that was an impressive accomplishment in this ultimately tough year.
-</div>
-<br />
-
-<strong><h3 style="margin-left:30px">Can you tell me about the work culture and environment at CMU?</h3></strong>
-<div style="margin-left:30px">
-If I am to use a single word to conclude, I would choose freedom -- students can explore the sea of knowledge however they want. I think most professors here are very nice (of course, especially Swarun) in that they heuristicly motivate their students by encouraging them to explore their real interests. They hardly act as an enforcer, forcing students to finish specific tasks; instead, they are like railroad switch operators that help students achieve their goals in the most efficient and fruitful way. With the rich recources (teachers, fellow students, equipments, lab spaces, you name it) here at CMU, students here are confident that they can make an impact in their own field. Thoughout the process of doing projects, students are not only getting the projects themselves, but also building their confidence, expertise and self-motivation. It is so nice to be a member in this community.
-</div>
-<br />
-
-<strong><h3 style="margin-left:30px">Can you share a little known fact about yourself?</h3></strong>
-<div style="margin-left:30px">
-Music is definitely an indispensable part of my life. I might have enrolled in musical engineering or even a music school in a parallel universe. I can play some guitar, I enjoy singing a lot, and I have even composed songs. Yet, the more I try, the more ignorant I feel I am. Therefore, I have a long list of what I want to learn systematically in my spare time: how to sing correctly, how to play the piano as a beginner, how to compose a song in a good manner. Life is still long, and I will furfill this list some day.
-</div>
-
-										</section>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
+<ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
+<li> <strong>OwLL: Accurate LoRa Localization using the TV Whitespaces</strong>, Atul Bansal, Akshay Gadre, Vaibhav Singh, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2021<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
@@ -270,3 +252,4 @@ Music is definitely an indispensable part of my life. I might have enrolled in m
 
 	</body>
 </html>
+
