--- a/people.html
+++ b/people.html
@@ -186,7 +186,7 @@
 
      <a href="http://www.andrew.cmu.edu/user/junboz2/"> <figure> <img src="images/Junbo.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
-																								    <figcaption>Junbo Zhang</a><br><div style="margin-bottom:10px">Co-advised by Prof. Soummya Kar</div></figcaption> </figure>
+																								    <figcaption>Junbo Zhang</a><br><div style="margin-bottom:10px"></div></figcaption> </figure>
 
 
      <a href="https://atul-bansal.github.io/"> <figure> <img src="images/Atul.jpg"
