--- a/xg.html
+++ b/xg.html
@@ -165,6 +165,7 @@ This project aims to devise next-generation wireless networks that achieve faste
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
+<li><strong>Quick (and Dirty) Aggregate Queries on Low-Power WANs</strong>, Akshay Gadre, Fan Yi, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2020 <em>(Best Paper Award)</em> [<a href="papers/quail-ipsn2020.pdf">PAPER</a>] [<a href="quail.html">WEBSITE</a>]<br /></li>
 <li><strong>Full Duplex Radios: Are we there yet?</strong>, Vaibhav Singh (Co-Primary), Akshay Gadre (Co-Primary) and Swarun Kumar, HotNets  2020 [<a href="papers/fdstudy-hotnets2020.pdf">PAPER</a>] [<a href="fdstudy.html">WEBSITE</a>]<br /></li>
 <li><strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 <em>(Best Paper Honorable Mention)</em> [<a href="papers/osprey-mobisys2020.pdf">PAPER</a>] [<a href="slides/osprey-mobisys2020.pptx">SLIDES</a>] [<a href="osprey.html">WEBSITE</a>]<br /></li>
 <li><strong>Osprey Demo: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="osprey.html">WEBSITE</a>]<br /></li>
