--- a/quasar.html
+++ b/quasar.html
@@ -135,68 +135,33 @@
 							<div class="row">
 
 
-<div class="6u 12u(mobile)"> <section>
-<strong>Project: Defining Next-Generation High-Speed Wireless</h4> </strong><br /><br />
 
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project Quasar: A Community-Driven Approach to Democratize Access to Satellite Ground Stations</h4></strong><br />
 <table style="width:100%">
 <tr>
 <td>
-<div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/xg.png" style="width:100%; height:350px;"/>
+<div style="padding:10px;border-width:2px;border-style:solid">
+<img src="images/quasar.png" style="width:100%"/>
 </div>
 </td>
-</tr><tr>
+</tr>
+<tr>
 <td style="width:10px">
 <br />
 </td>
 </tr><tr>
 <td style="vertical-align:middle">
-This project aims to devise next-generation wireless networks that achieve faster throughput and low latency. We both aim to study and re-design existing cellular infrastructure and develop new clean slate solutions. We developed solutions that learned critical problems in existing AT&amp;T and Verizon wireless networks. We also developed a best paper award-winning solution to more effectively predict performance at cellphones purely from the cellular towers, without draining the phones' battery. We also explore new networking technologies for high-speed wireless beyond 5-G: a robust and reliable mm-wave solution. </td>
+Should you decide to launch a nano-satellite today in Low-Earth Orbit, the cost of renting ground station communication infrastructure is likely to significantly exceed your launch costs. While space launch costs have lowered significantly with innovative launch vehicles, private players, and smaller payloads, access to ground infrastructure remains a luxury. We present a community-driven distributed reception paradigm for LEO satellite signals where signals received on many tiny handheld receivers (not necessarily deployed on rooftops but also indoors) are coherently combined to recover the desired signal. 
+</td>
 </tr>
 </table>
-<br />
-</section><section>
-<strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/pUFN0CXvZGY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br /></section>
-</div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Publications</h4> </strong><br />
-<ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
-<li><strong>A Community-Driven Approach to Democratize Access to Satellite Ground Stations</strong>, Vaibhav Singh, Akarsh Prabhakara, Diana Zhang, Osman Yagan and Swarun Kumar, MobiCom  2021 [<a href="quasar.html">WEBSITE</a>]<br /></li>
-<li><strong>Quick (and Dirty) Aggregate Queries on Low-Power WANs</strong>, Akshay Gadre, Fan Yi, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2020 <em>(Best Paper Award)</em> [<a href="papers/quail-ipsn2020.pdf">PAPER</a>] [<a href="quail.html">WEBSITE</a>]<br /></li>
-<li><strong>Full Duplex Radios: Are we there yet?</strong>, Vaibhav Singh (Co-Primary), Akshay Gadre (Co-Primary) and Swarun Kumar, HotNets  2020 [<a href="papers/fdstudy-hotnets2020.pdf">PAPER</a>] [<a href="fdstudy.html">WEBSITE</a>]<br /></li>
-<li><strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 <em>(Best Paper Honorable Mention)</em> [<a href="papers/osprey-mobisys2020.pdf">PAPER</a>] [<a href="slides/osprey-mobisys2020.pptx">SLIDES</a>] [<a href="osprey.html">WEBSITE</a>]<br /></li>
-<li><strong>Osprey Demo: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="osprey.html">WEBSITE</a>]<br /></li>
-<li><strong>Quick (and Dirty) Aggregate Queries on Low-Power WANs</strong>, Akshay Gadre, Fan Yi, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2020 <em>(Best Paper Award)</em> [<a href="papers/quail-ipsn2020.pdf">PAPER</a>] [<a href="quail.html">WEBSITE</a>]<br /></li>
-<li><strong>Millimeter-Wave Full Duplex Radios</strong>, Vaibhav Singh, Susnata Mondal, Akshay Gadre, Milind Srivastava, Jeyanandh Paramesh and Swarun Kumar, MobiCom  2020 [<a href="papers/mmfd-mobicom2020.pdf">PAPER</a>] [<a href="slides/mmfd-mobicom2020.pptx">SLIDES</a>] [<a href="mmfd.html">WEBSITE</a>]<br /></li>
-<li><strong>Perspective: eliminating channel feedback in next generation cellular networks </strong>, Deepak Vasisht, Swarun Kumar, Hariharan Rahul and Dina Katabi, ACM SIGCOMM CCR  2019<br /></li>
-<li><strong>Eliminating Channel Feedback in Next-Generation Cellular Networks </strong>, Deepak Vasisht, Swarun Kumar, Hariharan Rahul and Dina Katabi, SIGCOMM  2016 <em>(Best Paper Award, GetMobile Research Highlight)</em><br /></li>
-<li><strong>piStream: Physical Layer Informed Adaptive Video Streaming Over LTE</strong>, Xiufeng Xie, Xinyu Zhang, Swarun Kumar, and Li Erran Li, MobiCom  2015 <em>(ACM GetMobile Research Hightlight)</em><br /></li>
-<li><strong>LTE Radio Analytics Made Easy and Accessible</strong>, Ezzeldin Hamed, Dina Katabi, and Li Erran Li, ACM SIGCOMM  2014 [<a href="papers/lteye-sigcomm2014.pdf">PAPER</a>] [<a href="lteye.html">WEBSITE</a>]<br /></li>
-</ul>
-
 </section>
 </div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Project Participants</h4> </strong><br />
-
-
-<ul style="margin-top: 10px"> 
-<li> <strong> PI: </strong> Swarun Kumar </li>
-<li> <strong> Students: </strong> 
-Vaibhav Singh, Akshay Gadre and Akarsh Prabhakara</li>
-<li> <strong> Collaborators: </strong> Prof. Rick Carley, Prof. Anthong Rowe and Prof. Jeyanandh Paramesh</li></ul>
-
-
-</div>
-
-
-										</section>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
+<ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
+<li> <strong>A Community-Driven Approach to Democratize Access to Satellite Ground Stations</strong>, Vaibhav Singh, Akarsh Prabhakara, Diana Zhang, Osman Yagan and Swarun Kumar, MobiCom  2021<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
@@ -287,3 +252,4 @@ Vaibhav Singh, Akshay Gadre and Akarsh Prabhakara</li>
 
 	</body>
 </html>
+
