--- a/quasar.html
+++ b/quasar.html
@@ -157,7 +157,11 @@ Should you decide to launch a nano-satellite today in Low-Earth Orbit, the cost 
 </table>
 </section>
 </div>
-<div class="6u 12u(mobile)"> <section> 
+<div class="6u 12u(mobile)"> <section>
+<strong><h4 style="margin-left:0px">Code</h4></strong>
+    The code for Quasar is available at: [<a href="https://github.com/vaibhavsingh96/Quasar">LINK</a>]
+
+</section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>A Community-Driven Approach to Democratize Access to Satellite Ground Stations</strong>, Vaibhav Singh, Akarsh Prabhakara, Diana Zhang, Osman Yagan and Swarun Kumar, MobiCom  2021<br /><br />
