Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -199,6 +199,19 @@
 											<p>
 											</p>
 										</section>
+<section>
+											<header>
+												<h2>Postdoctoral Researchers</h2>
+											<p>
+												<center>
+                                                <a href="http://www.winlab.rutgers.edu/~mibrahim/">
+																									<figure>
+																										<img src="images/mohamed.png" alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
+																								 <figcaption> Mohamed Ibrahim Ahmed </figcaption> </figure>
+																								 </a>
+
+</header>
+</section>
 										<section>
 											<header>
 												<h2>Graduate Collaborators</h2>
