Swarun: Changed website

--- a/featuring-vaibhav.html
+++ b/featuring-vaibhav.html
@@ -164,7 +164,7 @@ I work on designing new or improved wireless communication and sensing systems, 
 
 <strong><h3 style="margin-left:30px">What are the research accomplishments that you are most proud of?</h3></strong>
 <div style="margin-left:30px">
-The first thing that comes to my mind is finally finishing the satellite project after almost 2 years. Despite all the challenges and change in project directions, I was able to finish the project thanks to my awesome collaborators who helped in different ways, from pitching interesting ideas for different components to running experiments at insane hours of the day. Almost all of the projects I have been involved in have had some crazy deadline situations when things didn’t look very positive but being able to pull through in these situations with the help of my collaborators and advisors is something I am proud of, although I would love to avoid these situations in the future :). I would say the transition from not knowing much to knowing a little bit about different things in wireless, not giving up while trying to make things work are some of the tiny but important personal accomplishments for me.
+The first thing that comes to my mind is finally finishing the satellite project after almost 2 years. Despite all the challenges and change in project directions, I was able to finish the project thanks to my awesome collaborators who helped in different ways, from pitching interesting ideas for different components to running experiments at insane hours of the day. Almost all of the projects I have been involved in have had some crazy deadline situations when things didn't look very positive but being able to pull through in these situations with the help of my collaborators and advisors is something I am proud of, although I would love to avoid these situations in the future :-). I would say the growth in knowledge and skillset, and the ability to giving up while trying to make things work are some of the tiny but important personal accomplishments for me.
 </div>
 <br />
 
@@ -176,7 +176,7 @@ I am fortunate to have advisors who have always given me the freedom to pursue d
 
 <strong><h3 style="margin-left:30px">Can you share a little known fact about yourself?</h3></strong>
 <div style="margin-left:30px">
-I am very interested in teaching. Although I am not very good at it right now, I hope to improve on it with some guidance. Apart from this, I am always excited about outdoor sports. I never say no to any opportunity to go out and play irrespective of the weather or time of the day. Over the last year, I have taken to running. Goal is to finish a marathon before I graduate. Lets see how it goes :D.
+I am very interested in teaching. Apart from this, I am always excited about outdoor sports. I never say no to any opportunity to go out and play irrespective of the weather or time of the day. Over the last year, I have taken to running. Goal is to finish a marathon before I graduate. Let's see how it goes :D.
 </div>
 
 										</section>
