--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -254,7 +254,7 @@ Page will be updated in August.
 			</ulx>
             <p>
             If you have any other question regarding LP IoT 2021, please contact us at <b>lpiot2021chairs@gmail.com</b>.
-	    <p align="center"><b><font color="red"><i>Look Forward to Seeing You at WiNTECH 2021, New Orleans, USA.</i></font></b></a></p>
+	    <p align="center"><b><font color="red"><i>Look Forward to Seeing You at LP-IoT 2021, New Orleans, USA.</i></font></b></a></p>
         </div>
     </section>
 
