Made New Orleans smaller

--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -50,11 +50,11 @@
     <header id="site-header" class="site-header valign-center" height="100px">
         <div class="intro">
 
-            <h2>New Orleans, United States</h2>
+
             <h1>ACM LP-IoT 2021 Workshop</h1>
             <p>in conjunction with</p>
             <a target="_blank" class="btn btn-white" href="https://www.sigmobile.org/mobicom/2021/">ACM MobiCom 2021</a>
-
+            <p>New Orleans, United States</p>
         </div>
     </header>
 
