--- a/millimetro.html
+++ b/millimetro.html
@@ -160,7 +160,7 @@ Millimetro is an ultra-low-power tag that can be localized at high accuracy over
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Millimetro: mmWave Retro-Reflective Tagsfor Accurate, Long Range Localization</strong>, Elahe Soltanaghaei (Co-Primary), Akarsh Prabhakara (Co-Primary), Artur Balanuta (Co-Primary), Matthew Anderson, Jan M. Rabaey, Swarun Kumar and Anthony Rowe, MobiCom  2021<br /><br />
+<li> <strong>Millimetro: mmWave Retro-Reflective Tagsfor Accurate, Long Range Localization</strong>, Elahe Soltanaghaei (Co-Primary), Akarsh Prabhakara (Co-Primary), Artur Balanuta (Co-Primary), Matthew Anderson, Jan M. Rabaey, Swarun Kumar and Anthony Rowe, MobiCom  2021 [<a href="papers/millimetro-mobicom2021.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
