--- a/quasar.html
+++ b/quasar.html
@@ -164,7 +164,7 @@ Should you decide to launch a nano-satellite today in Low-Earth Orbit, the cost 
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>A Community-Driven Approach to Democratize Access to Satellite Ground Stations</strong>, Vaibhav Singh, Akarsh Prabhakara, Diana Zhang, Osman Yagan and Swarun Kumar, MobiCom  2021<br /><br />
+<li> <strong>A Community-Driven Approach to Democratize Access to Satellite Ground Stations</strong>, Vaibhav Singh, Akarsh Prabhakara, Diana Zhang, Osman Yagan and Swarun Kumar, MobiCom  2021 [<a href="papers/quasar-mobicom2021.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
