--- a/owll.html
+++ b/owll.html
@@ -160,7 +160,7 @@ OwLL is a LoRa localization system that limits location tracking error to a few 
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>OwLL: Accurate LoRa Localization using the TV Whitespaces</strong>, Atul Bansal, Akshay Gadre, Vaibhav Singh, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2021<br /><br />
+<li> <strong>OwLL: Accurate LoRa Localization using the TV Whitespaces</strong>, Atul Bansal, Akshay Gadre, Vaibhav Singh, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2021 [<a href="papers/owll-ipsn2021.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
