--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
 											</header>
 											<ul class="check-list">
 
+<li> (4/21) Two papers accepted at IPSN 2021 on <a href="owll.html">LoRa localization</a> and <a href="textilesense.html">NFC Textiles</a></li> 
 <li> (2/21) Vaibhav Singh wins the James Sprague Presidential Fellowship from CIT!
 <li> (1/21) Two papers accepted at MobiCom 2021 on <a href="millimetro.html">mm-wave backscatter</a> and <a href="quasar.html">cubesat groundstations</a>
-<!-- <li> (1/21) Two papers accepted at IPSN 2021 on <a href="owll.html">LoRa localization</a> and <a href="textilesense.html">NFC Textiles</a></li> -->
 <li> (11/20) Read our perspective on <a href="fdstudy.html">full-duplex</a> at HotNets 2020</li>
 <li> (10/20) <a href="chariot.html">CharIoT</a> accepted at IEEE TMC 2020</li>
 <li> (9/20) <a href="rftattoo.html">RFTattoo</a> wins Best Wearables Long Paper at UbiComp 2020!</li>
