--- a/textilesense.html
+++ b/textilesense.html
@@ -164,7 +164,7 @@ TextileSense is a near-field beamforming system which can track everyday objects
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Locating Everyday Objects using NFC Textiles</strong>, Jingxian Wang, Junbo Zhang, Ke Le, Chengfeng Pan, Carmel Majidi and Swarun Kumar, IPSN  2021 [<a href="papers/textilesense-ipsn2021.pdf">PAPER</a>]<br /><br />
+<li> <strong>Locating Everyday Objects using NFC Textiles</strong>, Jingxian Wang (Co-Primary), Junbo Zhang (Co-Primary), Ke Le, Chengfeng Pan, Carmel Majidi and Swarun Kumar, IPSN  2021 [<a href="papers/textilesense-ipsn2021.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
