Added the TPC list

--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -277,7 +277,39 @@ Page will be updated in August.
 
 
             <h3>Technical Program Committee</h3>
-	           Details will be updated shortly.
+            Akshay	Gadre, Carnegie Mellon University
+            <br>
+            Ambuj	Varshney, University of California, Berkeley and KTH, Sweden
+            <br>
+            Bashima	Islam, University of North Carolina at Chapel Hill
+            <br>
+            Bob	Iannucci, Carnegie Mellon University
+            <br>
+            Branden	Ghena, Northwestern University
+            <br>
+            Brano	Kusy, CSIRO
+            <br>
+            Chenren	Xu, Peking University
+            <br>
+            Deepak	Vasisht, University of Illinois at Urbana-Champaign and Microsoft
+            <br>
+            Elahe	Soltanaghaei, Carnegie Mellon University
+            <br>
+            Jeremy	Gummeson, University of Massachusetts Amherst
+            <br>
+            Longfei	Shangguan, Microsoft Cloud&AI
+            <br>
+            Maria	Gorlatova, Duke University
+            <br>
+            Pat	Pannuto, UCSD
+            <br>
+            Swarun	Kumar, Carnegie Mellon University
+            <br>
+            Vaishnavi	Ranganathan, Microsoft Research
+            <br>
+            Wen	Hu, UNSW
+
+
  <!--
             <h3>Demo and Poster Chair</h3>
             Pengyu Zhang, Stanford University
