--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -249,7 +249,7 @@ Page will be updated in August.
 				<li>Embedded and energy-harvesting systems in the wild</li>
 				<li>Enabling ML and DL applications using above technologies</li>
 				<li>Fairness, equity, and transparency issues</li>
-				<li>Economics of the above technologie</li>
+				<li>Economics of the above technologies</li>
 				<li>Low-Power Spectrum Sensing</li>
 			</ulx>
             <p>
