--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -231,7 +231,8 @@ Page will be updated in August.
             <p align="justify"> With the proliferation of low-power IoT technologies, almost all objects purchased in future will have information to communicate with each other from your juice box to small satellites. While there have been tremendous advances in the capabilities of today’s embedded sensors, from storage, computation to power management, there is a key bottleneck that these sensors face – wireless networking</p>
 
 	    <p align="justify">LP-IoT is a workshop that brings together researchers in the broad field of low power and no energy wireless networking to discuss the next steps towards this future. The workshop will be broad in scope, gathering new ideas and experiences in the realm of low-power and backscatter wireless networks, facilitating discussions on emerging challenges and open questions in the field.</p>
-      <p align="justify">We are seeking original, previously unpublished papers addressing key issues and challenges in low power wireless networking. All submissions will be judged by their technical merit and relevance to the workshop, based on a thorough review process by the Technical Program Committee</p>
+      <p align="justify">We are seeking original, previously unpublished papers addressing key issues and challenges in low power wireless networking. All submissions will be judged by their technical merit and relevance to the workshop, based on a thorough review process by the Technical Program Committee. <br>
+      Visit the <a href="https://lpiot2021.hotcrp.com/" target="_blank"><b>paper submission site</b></a> to submit your manuscript.	</p>
 
 			<p align="justify">Topics of interest include, but are not limited to:</p>
 
@@ -384,8 +385,8 @@ Page will be updated in August.
 
             <br>
             <br>
-            <!--Visit the <a href="#" target="_blank"><b>paper submission site</b></a> to submit your manuscript.	-->
-            Paper Submission site to be updated here.
+            Visit the <a href="https://lpiot2021.hotcrp.com/" target="_blank"><b>paper submission site</b></a> to submit your manuscript.
+
             </p>
 
             <h3 class="section-title multiple-title">Important Dates</h3>
