--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -66,6 +66,7 @@
    <h3> What's New </h3>
    <ul>
  <li> 03/14/2021: Website is up!
+   <li>04/21/2021:  <a href="https://lpiot2021.hotcrp.com/" target="_blank"><b>Paper submission site</b></a> is up!
  </ul>
 
    </br></br>
