--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -233,7 +233,9 @@ Page will be updated in August.
 
 	    <p align="justify">LP-IoT is a workshop that brings together researchers in the broad field of low power and no energy wireless networking to discuss the next steps towards this future. The workshop will be broad in scope, gathering new ideas and experiences in the realm of low-power and backscatter wireless networks, facilitating discussions on emerging challenges and open questions in the field.</p>
       <p align="justify">We are seeking original, previously unpublished papers addressing key issues and challenges in low power wireless networking. All submissions will be judged by their technical merit and relevance to the workshop, based on a thorough review process by the Technical Program Committee. <br>
-      Visit the <a href="https://lpiot2021.hotcrp.com/" target="_blank"><b>paper submission site</b></a> to submit your manuscript.	</p>
+      Visit the <a href="https://lpiot2021.hotcrp.com/" target="_blank"><b>paper submission site</b></a> to submit your manuscript. Paper length is limited to six (6) pages (in two-column, 10-point format) with figures and everything (There can be 2 additional pages for references). Papers must include the author name and affiliation for single-blind peer reviewing by the program committee. Authors of accepted papers are expected to present their papers at the workshop. Accepted papers will be published in the ACM LP-IoT proceedings and will be archived in the ACM Library. All papers will be considered for the <b>Best Paper Award	</p>
+
+      </br></br>
 
 			<p align="justify">Topics of interest include, but are not limited to:</p>
 
@@ -376,7 +378,7 @@ Page will be updated in August.
                 </div>
             </div>
 
-	<p align="justify">Papers should contain original material and not be previously published or currently submitted for consideration elsewhere. Manuscripts must be submitted by using the HOTCRP conference <a href="#" target="_blank">management system</a>. Prospective authors are encouraged to submit a single PDF file with all font embedded, using the ACM conference proceedings format (use the same PDF <a href="https://www.sigmobile.org/mobicom/2018/cfp.php" target="_blank"><b>formatting guidelines</b></a> as the main conference). Paper length is limited to eight (8) pages (in two-column, 10-point format) including references, figures and everything. Papers must include the author name and affiliation for single-blind peer reviewing by the program committee. Authors of accepted papers are expected to present their papers at the workshop. Accepted papers will be published in the ACM LP-IoT proceedings and will be archived in the ACM Library. All papers will be considered for the <b>Best Paper Award</b>.
+	<p align="justify">Papers should contain original material and not be previously published or currently submitted for consideration elsewhere. Manuscripts must be submitted by using the HOTCRP conference <a href="#" target="_blank">management system</a>. Prospective authors are encouraged to submit a single PDF file with all font embedded, using the ACM conference proceedings format (use the same PDF <a href="https://www.sigmobile.org/mobicom/2021/cfp.html" target="_blank"><b>formatting guidelines</b></a> as the main conference). Paper length is limited to six (2) pages (in two-column, 10-point format) with figures and everything (There can be 2 additional pages for references). Papers must include the author name and affiliation for single-blind peer reviewing by the program committee. Authors of accepted papers are expected to present their papers at the workshop. Accepted papers will be published in the ACM LP-IoT proceedings and will be archived in the ACM Library. All papers will be considered for the <b>Best Paper Award</b>.
 	</br></br>
 
 <!--
