--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -65,9 +65,10 @@
 
    <h3> What's New </h3>
    <ul>
- <li> 03/14/2021: Website is up!
-   <li>04/21/2021:  <a href="https://lpiot2021.hotcrp.com/" target="_blank"><b>Paper submission site</b></a> is up!
- </ul>
+      <li> 06/15/2021: Paper deadline has passed! Reviewers are reviewing your papers...
+      <li> 04/21/2021:  <a href="https://lpiot2021.hotcrp.com/" target="_blank"><b>Paper submission site</b></a> is up!
+      <li> 03/14/2021: Website is up!
+   </ul>
 
    </br></br>
 
