--- a/tagfi.html
+++ b/tagfi.html
@@ -136,12 +136,12 @@
 
 
 
-<div class="6u 12u(mobile)"> <section> <strong><h4>Project Millimetro:  mmWave Retro-Reflective Tags for Accurate, Long Range Localization</h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project TagFi:  Locating Ultra-Low Power WiFi Tags Using Unmodified WiFi Infrastructure</h4></strong><br />
 <table style="width:100%">
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/millimetro.png" style="width:100%"/>
+<img src="images/tagfi.png" style="width:100%"/>
 </div>
 </td>
 </tr>
@@ -151,16 +151,20 @@
 </td>
 </tr><tr>
 <td style="vertical-align:middle">
-Millimetro is an ultra-low-power tag that can be localized at high accuracy over extended distances. We develop Millimetro in the context of autonomous driving to efficiently localize roadside infrastructure such as lane markers and road signs, even if obscured from view, where visual sensing fails. While RF-based localization offers a natural solution, current ultra-low-power localization systems struggle to operate accurately at extended rangesunder strict latency requirements. Millimetro addresses this challenge by re-using existing automotive radars that operate at mmWave frequency where plentiful bandwidth is available to ensure high accuracy and low latency. We address the crucial free space path loss problem experienced by signals from the tag at mmWave bands by building upon Van Atta Arrays that retro-reflect incident energy back towards the transmitting radar with minimal loss and low power consumption. Our experimental results indoors and outdoors demonstrate a scalable system that operates at a desirable range (over 100 m), accuracy (centimeter-level), and ultra-low-power.
+Tag localization is crucial for many context-aware and automation applications in smart homes, retail stores, or warehouses. While custom localization technologies (e.g RFID) have the potential to support low-cost battery-free tag tracking, the cost and complexity of commissioning a space with beacons or readers has stifled adoption. In this paper, we explore how WiFi backscatter localization can be realized using the existing WiFi infrastructure already deployed for data applications. We present a new approach that leverages existing WiFi infrastructure to enable extremely low-power and accurate tag localization relative to a single scanning device. First, we adopt an ultra-low power tag design in which the tag blindly modulates ongoing WiFi packets using On-Off Keying (OOK). Then, we utilize the underlying physical properties of multipath propagation to detect the passive wireless reflection from the tag in the presence of rich multipath propagations. Finally, we localize the tag from a single receiver by forming a triangle between the tag reflection and the LoS path between the two WiFi transceivers. We implement TagFi using a customized backscatter tag and off-the-shelf WiFi chipsets. Our empirical results in a cluttered office building demonstrate that TagFi achieves a median localization accuracy of 0.2m up to 8 meters range.
 </td>
 </tr>
 </table>
 </section>
 </div>
-<div class="6u 12u(mobile)"> <section> 
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/gnSSzYrRU6o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Millimetro: mmWave Retro-Reflective Tags for Accurate, Long Range Localization</strong>, Elahe Soltanaghaei (Co-Primary), Akarsh Prabhakara (Co-Primary), Artur Balanuta (Co-Primary), Matthew Anderson, Jan M. Rabaey, Swarun Kumar and Anthony Rowe, MobiCom  2021 [<a href="papers/millimetro-mobicom2021.pdf">PAPER</a>]<br /><br />
+<li> <strong>TagFi: Locating Ultra-Low Power WiFi Tags Using Unmodified WiFi Infrastructure</strong>, Elahe Soltanaghaei, Adwait Dongare, Akarsh Prabhakara, Swarun Kumar, Anthony Rowe and Kamin Whitehouse, UbiComp  2021 [<a href="papers/tagfi-ubicomp2021.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
